tests/build/widget/cannot_remove_default_captured.stderr
error: cannot remove, property `id` is captured in inherited fn `new`
 --> $DIR/cannot_remove_default_captured.rs:7:18
  |
7 |         remove { id }
  |                  ^^
