tests/build/widget/cannot_remove_default_captured.rs
use zero_ui::core::widget;

#[widget($crate::test_widget)]
pub mod test_widget {

    properties! {
        remove { id }
    }
}

fn main() {}
